--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=back-end
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tcc
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=Jesus100
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
